fix: styling for user sign up list was too small, it is now larger and bolded

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,19 @@ nav a {
 .content {
     padding: 1em;
 }
+ul {
+    padding: 0;
+    margin: 0;
+    font-size: 25px;
+    font-weight: bold;
+  }
+  ul li {
+    padding: 0;
+    margin: 1em;
+    font-size: 18px;
+    font-weight: normal;
+
+  }
 
 /* Call to action */
 .cta {
